# anima-lora-config-launcher

./: LICENSE  README.md  pyproject.toml  run_app.bat
src/anima_lora_launcher/: __init__.py  app.py  captions.py  config_writer.py  recommender.py  runner.py  settings_store.py
